# PowerPuffBoys_Credit_Risk_Scoring_GenAI

./: .gitignore  Credit Risk Prediction.ipynb  README.md  agent_app.py  app.py  graph.py  ingest.py  pyproject.toml  requirements.txt  requirements_phase2.txt  retriever.py  yh.ipynb
.claude/: settings.local.json
.ipynb_checkpoints/: Credit Risk Prediction-checkpoint.ipynb  yh-checkpoint.ipynb
.streamlit/: config.toml  secrets.toml.example
Dataset/: Unseen_CIBL_Data.csv  schema.md
Report/: Credit_Risk_Scoring_Report.docx  Phase2_Agentic_Credit_Risk_Report.tex
chroma_db/5dec3289-8d81-4e16-a6c0-6ecd88e29bdc/: index_metadata.pickle
models/: feature_columns.joblib  finalized_model.joblib
