[project]
name = "powerpuffboys-credit-risk-scoring-genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "chromadb>=0.5.0",
    "groq>=0.9.0",
    "imbalanced-learn>=0.11.0",
    "joblib>=1.3.0",
    "langchain-core>=0.2.0",
    "langgraph>=0.2.0",
    "lightgbm>=4.0.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "pypdf>=4.0.0",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.3.0",
    "sentence-transformers==2.7.0",
    "streamlit>=1.35.0",
    "transformers==4.40.2",
]
